--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
 	},
 	"dependencies": {
 		"@pinia/nuxt": "^0.5.1",
+		"pinia-plugin-persistedstate": "^4.1.3",
 		"sass": "^1.68.0",
+		"sweetalert2": "^11.14.5",
 		"vuetify": "^3.3.23"
 	},
 	"version": "2.0.0"
